:memo:  docs: adding tecnologies